<resources xmlns:tools="http://schemas.Android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">合伙人企成成</string>
    <string name="main_baobiao">报表</string>
    <string name="main_my">我的</string>
    <string name="main_todayreceive">今日收益(元)</string>
    <string name="main_shouyi">收益(元):</string>
    <string name="main_danshu">单数(单):</string>
    <string name="tixian">提现</string>
    <string name="mine_mycard">我的银行卡</string>
    <string name="phone">电话</string>
    <string name="area">地区</string>
    <string name="add_card">添加银行卡</string>
    <string name="step1_bangdingkahao">请绑定持卡人本人银行卡</string>
    <string name="step_chikaren">持卡人</string>
    <string name="name">姓名</string>
    <string name="yinhangkahao">卡号</string>
    <string name="yinhangka">银行卡号</string>
    <string name="mybandcard">我的银行卡</string>
    <string name="next_step">下一步</string>
    <string name="fill_car_msg">填写银行卡信息</string>
    <string name="kaleixing">卡类型</string>
    <string name="yinhangyuliuhaoma">银行预留手机号码</string>
    <string name="agree">同意</string>
    <string name="fuwuxieyi">《服务协议》</string>
    <string name="yanzhengshouji">验证手机号</string>
    <string name="jiaoyanma">校验码</string>
    <string name="phonetest_notmsg">收不到验证码?</string>
    <string name="done">完成</string>
    <string name="addcard_done">添加成功！!</string>
    <string name="tixianjine">提现金额</string>
    <string name="money">￥</string>
    <string name="draw_cash">余额提现</string>
    <string name="choise_bankcard">选择银行卡</string>
    <string name="mybank_card">到帐银行卡</string>
    <string name="use_newcard">使用新卡提现</string>
    <string name="inputyourpassword">请输入提现密码</string>
    <string name="tixian_yinhangka">银行卡</string>
    <string name="tixian_twoour">两小时到帐</string>
    <string name="yuetixian">余额提现</string>
    <string name="input_tixian_password">请输入提现密码</string>
    <string name="yanzhengshenf">请输入提现密码，以验证身份</string>
    <string name="inputyouphonenum">请输入你的手机号码</string>
    <string name="inputyourpasswiord">请输入你的密码</string>
    <string name="net_error">网络错误，请检查网络是否连接</string>
    <string name="all_yue">可提现余额(元)</string>
    <string name="today_orders">今日单数</string>
    <string name="details_order">订单明细</string>
    <string name="befores_yestoday">前日</string>
    <string name="phonenum">手机号</string>
    <string name="orders_fenlei">全部分类</string>
    <string name="num_order">单数:</string>
    <string name="shouyi">收益:</string>
    <string name="service">服务:</string>
    <string name="settingpass">设置提现密码</string>
    <string name="mimabuyizhi">两次密码设置不一致，请重新设置</string>
    <string name="zongshouyi">总收益(元)</string>
    <string name="home_backpress">再按一次退出</string>
    <string name="tuiguang">我要推广</string>
    <string name="share">分享</string>
    <string name="gengxinchenggong">数据更新成功</string>
    <string name="failtorefresh">更新失败</string>
    <string name="partner">合伙人</string>
    <string name="woyaotougao">我要投稿</string>
    <string name="tougaojilu">投稿记录</string>
    <string name="dailiren">代理人</string>
    <string name="haopingl">好评率</string>
    <string name="chengdanliang">成单量</string>
    <string name="zonghe">综合</string>
    <string name="good_ca">好评数</string>
    <string name="setting">设置</string>
    <string name="zanweikaitong">暂未开通</string>
    <string name="qingliwancheng">缓存清理完成</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="regist_user">注册</string>
    <string name="shenqingdiqu">申请地区</string>
    <string name="tijiaodiqu">提交地区成功</string>
    <string name="xiugaichenggong">密码修改成功</string>
    <string name="title_activity_main_a2ctivity">MainA2ctivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
