<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.ts.partner.partnerActivity.WaiterListActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/qiangdan_toptabtex_notselect"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:text="@string/dailiren"
                    android:textColor="@color/main_tixianbutton"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="11dp"-->
                <!--android:layout_toRightOf="@id/orders_fenlei"-->
                <!--android:src="@mipmap/order_up" />-->
                <ImageButton
                    android:id="@+id/waiter_back"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/fanhui" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/write"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/waiters_tab1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zonghe"
                    android:textColor="@color/gray3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/waiter_line" />


                <Button
                    android:id="@+id/waiters_tab2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/haopingl"
                    android:textColor="@color/gray3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/waiter_line" />
                <Button
                    android:id="@+id/waiters_tab3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chengdanliang"
                    android:textColor="@color/gray3" />

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/waiter_hengxian"
                />

            <android.support.v4.view.ViewPager
                android:id="@+id/waiters_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v4.view.ViewPager>
        </LinearLayout>
</layout>