<?xml version="1.0" encoding="utf-8"?>
<!--homefragment使用的是activity_home  不是这个-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="HomeBinding">
      <variable
          name="Datas"
          type="com.ts.partner.partnerBean.BendingBean.DatasInMain">

      </variable>
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/write"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/main_yelloback"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/zhucecolortitle"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/partner"
                    android:textColor="@color/titiletextcolor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/main_todayreceive"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/home_shouyi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@{Datas.todayOrderCount.equals(`0`)?`0`: Datas.todayMoney}"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="50sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/main_jine">

                <LinearLayout
                    android:id="@+id/home_danshutitile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/today_orders"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="13sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zongshouyi"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/all_yue"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@id/main_danshutitile"
                    android:layout_marginBottom="11dp"
                    android:layout_marginTop="11dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{Datas.todayOrderCount}"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="111"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="20sp" />
                    <!--android:text="@{Datas.allMoney.equals(``)?`0`:Datas.allMoney}"-->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{``+Datas.ketixian}"
                        android:textColor="@color/titiletextcolor"
                        android:textSize="20sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/home_dingdanmingxi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_mainbutton"
            >

            <ImageView
                android:id="@+id/main_dingdan_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@mipmap/main_mingxi" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:src="@mipmap/main_jiantou" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/main_dingdan_image"
                android:text="@string/details_order"
                android:textColor="@color/gray1" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/main_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="昨日"
                android:textColor="@color/gray3"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/befores_yestoday"
                android:textColor="@color/gray3"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/home_yesto_shoyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_main_textmargin"
                android:text="@string/main_shouyi"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/main_yesto_shoyi"
                android:text="@{Datas.yesdayOrderCount.equals(`0`)?`0`:Datas.yesdayMoney}"
                android:textColor="@color/titiletextcolor"
                android:textSize="13sp"

                />

            <Button
                android:id="@+id/home_biaodan"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/home_preyes_shouyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="@dimen/activity_main_textmargin"
                android:layout_toRightOf="@+id/home_biaodan"
                android:text="@string/main_shouyi"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/home_preyes_shouyi"
                android:text="@{Datas.beyesdayOrderCount.equals(`0`)?`0`:Datas.beyesdayMoney}"
                android:textColor="@color/titiletextcolor"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"

           >

            <TextView
                android:id="@+id/home_yesto_danshu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/activity_main_textmargin"
                android:text="@string/main_danshu"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/home_yesto_danshu"
                android:text="@{Datas.yesdayOrderCount}"
                android:textColor="@color/titiletextcolor"
                android:textSize="13sp"

                />

            <Button
                android:id="@+id/home_biaodan2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/home_preyes_danshu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_main_textmargin"
                android:layout_toRightOf="@+id/home_biaodan2"
                android:text="@string/main_danshu"
                android:textSize="13sp" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/home_preyes_danshu"
                android:text="@{Datas.beyesdayOrderCount}"
                android:textColor="@color/titiletextcolor"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgray">

            <Button
                android:id="@+id/home_tixian"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:text="@string/tixian"
                android:textColor="@color/main_tixianbutton"
                android:background="@drawable/selector_mainbutton"
                />
        </RelativeLayout>
    </LinearLayout>
</layout>